refactoring on new pattern

--- a/communicator.client/pom.xml
+++ b/communicator.client/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>eu.trentorise.smartcampus</groupId>
   <artifactId>communicator.client</artifactId>
-  <version>1.1</version>
+  <version>1.1.1</version>
 <packaging>jar</packaging>
 
 	<properties>
@@ -10,7 +10,7 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
+		<!--  <dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
@@ -54,7 +54,30 @@
 			<artifactId>jackson-mapper-lgpl</artifactId>
 			<version>1.8.2</version>
 			<type>jar</type>
+		</dependency> -->
+		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20090211</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.trentorise.smartcampus</groupId>
+			<artifactId>smartcampus.client.commons</artifactId>
+			<version>1.1</version>
+		</dependency>
+		
 
 	</dependencies>
 
