--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>eu.trentorise.smartcampus</groupId>
   <artifactId>communicator.client</artifactId>
-  <version>2.0</version>
+  <version>2.1</version>
 <packaging>jar</packaging>
 
 	<properties>
@@ -10,74 +10,29 @@
 	</properties>
 
 	<dependencies>
-		<!--  <dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.10</version>
-			<scope>test</scope>
-		</dependency>
-		
-		 <dependency>
-		 	<groupId>log4j</groupId>
-		 	<artifactId>log4j</artifactId>
-		 	<version>1.2.17</version>
-		 </dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-			<version>${spring-version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>${spring-version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-beans</artifactId>
-			<version>${spring-version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>${spring-version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-lgpl</artifactId>
-			<version>1.8.2</version>
-			<type>jar</type>
-		</dependency> -->
-		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>4.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.json</groupId>
-			<artifactId>json</artifactId>
-			<version>20090211</version>
 		</dependency>
 		<dependency>
 			<groupId>eu.trentorise.smartcampus</groupId>
 			<artifactId>smartcampus.client.commons</artifactId>
 			<version>2.0</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20090211</version>
+		</dependency>
+    <dependency>
+      <groupId>eu.trentorise.smartcampus</groupId>
+      <artifactId>profileservice.client</artifactId>
+      <version>2.1</version>
+      <scope>test</scope>
+    </dependency>
+				
 
 	</dependencies>
 
